--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,8 @@
+import groovy.json.JsonBuilder
+import groovy.json.JsonSlurper
+
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 25
@@ -33,7 +37,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
 }
 
+// maven pom specs
+
+group = 'cz.csas.lockerui'
+version = readVersionName()
+
 // Thanks to https://medium.com/@kmlong1183/using-fastlane-tools-and-android-2e8d76bb138b#.ew4kj88sa
+
 def readVersionName() {
     def version = readVersion()
     return "${version["major"]}.${version["minor"]}.${version["patch"]}"
@@ -65,7 +75,6 @@ def readVersion() {
 }
 
 def incrementBuildVersion(def type = "patch") {
-    def versionFile = new File(project.rootDir, "version.properties")
     def version = readVersion()
 
     def major = version["major"] as int
@@ -87,6 +96,9 @@ def incrementBuildVersion(def type = "patch") {
     version["minor"] = minor.toString()
     version["patch"] = patch.toString()
 
+    // write into version.properties
+
+    def versionFile = new File(project.rootDir, "version.properties")
     def stream = new FileOutputStream(versionFile)
     try {
         version.store(stream, null)
@@ -94,7 +106,19 @@ def incrementBuildVersion(def type = "patch") {
         stream.close()
     }
 
-    println "Version is now: {" + major + "." + minor + "." + patch+"}"
+    // fix descriptor.json bintray file version
+
+    def descriptorFile = new File(project.rootDir, "descriptor.json")
+    def versionName = major + "." + minor + "." + patch
+    def descriptor = new JsonSlurper().parse(descriptorFile)
+
+    descriptor.version.name = versionName
+    descriptor.version.vcs_tag = versionName
+    descriptor.version.released = new Date().format('yyyy-MM-dd')
+
+    descriptorFile.write(new JsonBuilder(descriptor).toPrettyString())
+
+    println "Version is now: {" + versionName + "}"
 }
 
 task doMajorVersionIncrement << {
@@ -110,4 +134,27 @@ task doMinorVersionIncrement << {
 task doPatchVersionIncrement << {
     println "Incrementing patch version..."
     incrementBuildVersion("patch")
+}
+
+// generate the javadoc and sources https://code.tutsplus.com/tutorials/creating-and-publishing-an-android-library--cms-24582#
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    failOnError false
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
 }
