--- a/core/build.gradle
+++ b/core/build.gradle
@@ -145,18 +145,18 @@ def incrementBuildVersion(def type = "patch") {
     // fix descriptor.json bintray file version
 
     def descriptorFile = new File(project.rootDir, "descriptor.json")
-    def versionName = major + "." + minor + "." + patch
-    def path = "cz/csas/cs-core-sdk/" + versionName + "/";
-
     def descriptor = new JsonSlurper().parse(descriptorFile)
+    def versionName = major + "." + minor + "." + patch
+    def projectName = descriptor.files[0].uploadPattern.split("/")[2];
+    def path = "cz/csas/" + projectName + "/" +versionName + "/";
 
     descriptor.version.name = versionName
     descriptor.version.vcs_tag = versionName
     descriptor.version.released = new Date().format('yyyy-MM-dd')
 
     descriptor.files[0].uploadPattern = path + "\$1";
-    descriptor.files[1].uploadPattern = path + "cs-core-sdk-" + versionName + ".aar";
-    descriptor.files[2].uploadPattern = path + "cs-core-sdk-" + versionName + ".pom";
+    descriptor.files[1].uploadPattern = path + projectName + "-" + versionName + ".aar";
+    descriptor.files[2].uploadPattern = path + projectName + "-" + versionName + ".pom";
 
     descriptorFile.write(new JsonBuilder(descriptor).toPrettyString())
 
